# oop-course

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
lab1/: CMakeLists.txt  main.cpp
lab1/include/: isCleanNumber.h
lab1/src/: clean_number.cpp
lab1/tests/: test_clean_number.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: binary.h
lab2/src/: binary.cpp
lab2/tests/: test_binary.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
lab3/src/: hexagon.cpp  pentagon.cpp  rhombus.cpp
lab3/tests/: test_figure.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
lab4/src/: array.cpp  hexagon.cpp  pentagon.cpp  rhombus.cpp
lab4/tests/: test_figure.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: block_memory_resourse.h  singly_linked_list.h
lab5/src/: block_memory_resourse.cpp  singly_linked_list.cpp
lab5/tests/: tests_list.cpp
lab6/: CMakeLists.txt  docker-compose.yml  main.cpp
lab6/frontend/: index.html
lab6/game/: Dockerfile  main  main.cpp
lab6/game/include/: arena.h  battle_visitor.h  dragon.h  frog.h  knight.h  npc.h  npc_factory.h
lab6/game/src/: arena.cpp  battle_visitor.cpp  file_logger.cpp
lab6/game/tests/: tests_game.cpp
lab6/include/: battle_visitor.h  console_logger.h  file_logger.h  frog.h  npc.h  observer.h  visitor.h
lab6/src/: arena.cpp  battle_visitor.cpp  dragon.cpp  frog.cpp  knight.cpp  npc.cpp
lab7/: CMakeLists.txt
lab7/game/: main  main.cpp  npcs.txt
lab7/game/include/: arena.h  battle_stream.h  dragon.h  frog.h  knight.h  npc.h  npc_factory.h  sync_arena.h
lab7/game/src/: arena.cpp  battle_stream.cpp  battle_visitor.cpp  console_logger.cpp  dragon.cpp  frog.cpp  knight.cpp  npc.cpp  sync_arena.cpp
(+1 files in other folders)
